--- a/app/home.html
+++ b/app/home.html
@@ -128,11 +128,16 @@
 	<div class="container">
 		<!-- <div class="decor"></div> -->
 		<div class="description">
-			<div>Die inAut GmbH unterstützt im Auftrag der IV und anderer </div>
+			Die inAut GmbH unterstützt im Auftrag der IV und anderer
+			zuweisender Stellen neurodiverse Menschen
+			(Autismus-Spektrum, AD(H)S) bei der Suche und beim Erhalt
+			eines Ausbildungs- oder Arbeitsplatzes in der
+			Privatwirtschaft
+			<!-- <div>Die inAut GmbH unterstützt im Auftrag der IV und anderer </div>
 			<div>zuweisender Stellen neurodiverse Menschen</div>
 			<div>(Autismus-Spektrum, AD(H)S) bei der Suche und beim Erhalt</div>
 			<div> eines Ausbildungs- oder Arbeitsplatzes in der</div>
-			<div>Privatwirtschaft</div>
+			<div>Privatwirtschaft</div> -->
 		</div>
 		<div class="row reference">
 			<div class="col-12 col-sm-6 reference-block reference-left">
