--- a/app/offer.html
+++ b/app/offer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-us">
 <head>
 	<meta charset="utf-8">
@@ -207,6 +207,224 @@
     </div>
 </footer>
 	<script src="libs/jquery/jquery.min.js"></script>
+<!-- <script src="libs/slick/slick.min.js"></script> -->
+<script src="libs/swiper/swiper.min.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+	<meta charset="utf-8">
+	<!-- <base href="/"> -->
+
+	<title>Home</title>
+	<meta name="description" content="">
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+
+	<!-- Template Basic Images Start -->
+	<meta property="og:image" content="path/to/image.jpg">
+	<link rel="icon" href="img/favicon/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+
+	<!-- Template Basic Images End -->
+
+	<!-- Custom Browsers Color -->
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Libs -->
+	<link rel="stylesheet" href="libs/fontawesome/css/all.min.css">
+	<link rel="stylesheet" href="libs/swiper/swiper.min.css">
+	<!-- <link rel="stylesheet" href="libs/slick/slick.css"> -->
+
+	<!-- Style -->
+	<link rel="stylesheet" href="css/index.min.css">
+</head>
+<body>
+	<header class="header">
+	<div class="container header-content">
+		<a href="/" class="logo">
+			<img src="img/svg/logo.svg" alt="logo">
+		</a>
+		<div class="header-body">
+			<ul class="menu">
+				<li><a href="offer.html">Angebot</a></li>
+				<li><a href="for-companies.html">Für Unternehmen</a></li>
+				<li><a href="about-us.html">Über uns</a></li>
+				<li><a href="current.html">Aktuelles</a></li>
+				<li><a href="jobs.html">Jobs</a></li>
+				<li><a href="contact.html"> Kontakt</a></li>
+			</ul>
+			<div class="burger d-lg-none">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+	</div>
+</header>
+	<main class="main">
+     <main class="main global">
+	<div class="global-top">
+        <div class="global-top-content">
+            <div class="global-header">
+                <img class="global-img" src="img/sk_an.png" alt="img">
+            </div>
+            <div class="container">
+                <div class="global-item">Angebot</div>
+                <h1 class="global-title">Massgeschneiderte Begleitung für Sie</h1>
+                <div class="global-text an-text">Die Angebote der inAut GmbH können einzeln oder gesamthaft nacheinander in Anspruch genommen werden, sofern eine Kostengutsprache einer zuweisenden Stelle (z.B. IV-Stellen, Sozialdienst, RAV, Pro Infirmis) vorhanden ist. Sie sind noch nicht bei der IV oder einer anderen Stelle gemeldet, würden aber gerne durch uns unterstützt werden? Rufen Sie uns an, wir beraten Sie gerne!</div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="line-dec">
+                <div class="line-dec-content"></div>
+            </div>
+
+            <div class="global-block">
+                <div class="row">
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
+                            <img src="img/svg/nose.svg" alt="img">
+                        </div>
+                        <h2 class="global-block-title">Suche von Schnuppereinsätzen</h2>
+                        <div class="global-text global-block-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich gelebt werden.</div>
+                        <a class="general-link" href="search-of-trial-missions.html">zum Angebot</a>
+                    </div>
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
+                            <img src="img/svg/scool.svg" alt="img">
+                        </div>
+                        <h2 class="global-block-title">Suche eines Ausbildungsplatzes</h2>
+                        <div class="global-text global-block-text">Von der Suche auf Online-Plattformen, über Bewerbungen erstellen bis zum Begleiten an Vorstellungsgespräche - inAut unterstützt Sie individuell.</div>
+                        <a class="general-link" href="job-search.html">zum Angebot</a>
+                    </div>
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
+                            <img src="img/svg/find.svg" alt="img">
+                        </div>
+                        <h2 class="global-block-title">Suche einer Festanstellung</h2>
+                        <div class="global-text global-block-text">Ein massgeschneidertes Stellenprofil,  gezieltes Kommunikationstraining gepaart mit unserem Netzwerk führen Sie zum Erfolg.</div>
+                        <a class="general-link" href="looking-job.html">zum Angebot</a>
+                    </div>
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
+                            <img src="img/svg/family.svg" alt="img">
+                        </div>
+                        <h2 class="global-block-title">Coaching während der Ausbildung</h2>
+                        <div class="global-text global-block-text">Eine Ausbildung birgt viele Höhen, aber auch Tiefen. Wir unterstützen Lernende sowie Arbeitgeber/innen auf dem Weg zum erfolgreichen Abschluss. </div>
+                        <a class="general-link" href="coaching-training.html">zum Angebot</a>
+                    </div>
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
+                            <img src="img/svg/apt.svg" alt="img">
+                        </div>
+                        <h2 class="global-block-title">Berufliche Abklärung in der Privatwirtschaft</h2>
+                        <div class="global-text global-block-text">Oft ist es schwierig, anhand ein bis zwei Schnuppertagen zu entscheiden, welcher der richtige Beruf ist. Eine Abklärung ist viel aufschlussreicher.</div>
+                        <a class="general-link" href="professional-clarification.html">zum Angebot</a>
+                    </div>
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
+                            <img src="img/svg/comp.svg" alt="img">
+                        </div>
+                        <h2 class="global-block-title">Coaching zum Erhalt eines Arbeitsplatzes</h2>
+                        <div class="global-text global-block-text">Sie haben Schwierigkeiten aufgrund einer Diagnose in Ihrem bisherigen Job zu bestehen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in. </div>
+                        <a class="general-link" href="coaching-job.html">zum Angebot</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+	</div>
+
+    <div class="neurodiversity neurodiversity-mob">
+		<div class="container">
+			<div class="home-title neurodiversity-title">Neurodiversität & Arbeit</div>
+			<h2 class="neurodiversity-item">Wer anders “tickt” kann Aussergewöhnliches leisten</h2>
+			<p class="neurodiversity-text word-text">
+				inAut unterstützt auch Menschen, bei denen eine psychosoziale, affektive oder verhaltensauffällige Persönlichkeitsstörung oder eine Depression diagnostiziert wurde.  Aus unserer Erfahrung brauchen Betroffene mehrere Versuche, um im Arbeitsalltag der Privatwirtschaft erstmals, oder auch nach einer längeren Arbeitsunfähigkeit wieder Fuss zu fassen…
+			</p>
+			<img class="neurodiversity-img" src="img/svg/plus.svg" alt="img">
+            <a class="neurodiversity-more" href="#">Mehr</a>
+			<!-- <div class="neurodiversity-more">Mehr</div> -->
+		</div>
+	</div>
+
+    <div class="contact-us">
+		<div class="container">
+			<h3>Kontaktieren Sie uns.</h3>
+			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+			<a class="home-btn" href="#">ZUm Kontakt</a>
+		</div>
+	</div>
+</main>
+    </main>
+  <footer class="footer">
+    <div class="footer-content">
+        <div class="container">
+            <div class="row footer-text">
+                <div class="col-12 footer-logo">
+                    <img src="img/svg/logo.svg" alt="img">
+                </div>
+                <div class="col-12 col-sm-3 col-md-4 indent-col">
+                    <a class="footer-adres" target="_blank" href="https://www.google.com/maps/place/inAut+GmbH/@47.0457934,8.3064746,15z/data=!4m5!3m4!1s0x0:0xc406acff6491f092!8m2!3d47.0457934!4d8.3064746">
+                        inAut GmbH Waldstätterstrasse 3 6003 Luzern
+                    </a>
+                </div>
+                <div class="col-12 col-sm-6 col-md-5 indent-col">
+                    <div class="footer-block">
+                        <div>Telefon</div>
+                        <a class="footer-data" href="tel:+41 79 242 53 53">+41 79 242 53 53</a>
+                    </div>
+                    <div class="footer-block">
+                        <div>E-Mail</div>
+                        <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-3 indent-col footer-menu">
+                    <ul>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="offer.html">Angebot</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="for-companies.html">Für Unternehmen</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="about-us.html">Über uns</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="current.html">Aktuelles</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="jobs.html">Jobs</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="contact.html">Kontakt</a>
+                        </li>
+                    </ul>
+                    <!-- <div class="footer-block">
+                        <img src="img/svg/arrows.svg" alt="img">
+                        <div>Angebot</div>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyrights">
+        Impressum  |  Datenschutz
+    </div>
+</footer>
+  <script src="libs/jquery/jquery.min.js"></script>
 <!-- <script src="libs/slick/slick.min.js"></script> -->
 <script src="libs/swiper/swiper.min.js"></script>
 <script src="js/main.js"></script>
