fix page content end mob

--- a/app/_blog-article.html
+++ b/app/_blog-article.html
@@ -65,6 +65,19 @@
                 <li>Serien und Film Junkie</li>
             </ul>
         </div>
+        <img class="our-customers-mob-img" src="img/unclem.png" alt="img">
+        <div class="our-customers-mob">
+            <h3 class="our-customers-title mob-title">Dein Coach – Res Kocher</h3>
+            <ul class="mob-ul">
+                <li>Coach Informatik</li>
+                <li>Frontend Enthusiast</li>
+                <li>Angular Love</li>
+                <li>Apple Fan</li>
+                <li>Game Geek</li>
+                <li>Serien und Film Junkie</li>
+            </ul>
+        </div>
+
         <div class="go-block go-block-premature">
             <div class="go-block-content">
                 <a class="go-block-previous" href="current.html">
