--- a/app/_home.html
+++ b/app/_home.html
@@ -6,8 +6,7 @@
 				<div class="home-content" style="background-image: url(img/top_home.png);">
 					<div class="home-title">inAut GmbH</div>
 					<div class="home-text">
-						<div>Ihre Stellensuche</div>
-						<div>in guten Händen</div>
+						Ihre Stellensuche n guten Händen
 					</div>
 					<a class="home-btn home-btn-mob" href="#">JOBs</a>
 				</div>
@@ -16,8 +15,7 @@
 				<div class="home-content" style="background-image: url(img/profess.png);">
 					<div class="home-title">inAut GmbH</div>
 					<div class="home-text">
-						<div>Professionelle Unterstützung bei</div>
-						<div>der Lehrstellensuche</div>
+						Professionelle Unterstützung bei der Lehrstellensuche
 					</div>
 					<a class="home-btn home-btn-mob" href="#">Angebot</a>
 				</div>
@@ -26,8 +24,7 @@
 				<div class="home-content" style="background-image: url(img/unter.png);">
 					<div class="home-title">inAut GmbH</div>
 					<div class="home-text">
-						<div>Unterstützung im Arbeitsalltag und</div>
-						<div>Weiterbildung</div>
+						Unterstützung im Arbeitsalltag und Weiterbildung
 					</div>
 					<a class="home-btn home-btn-mob" href="#">Für Unternehmen</a>
 				</div>
@@ -91,28 +88,28 @@
 				<div class="home-title">Angebote</div>
 				<h2>Wie wir Betroffene unterstützen</h2>
 				<p>inAut unterstützt Sie mittels jahrelanger Erfahung kompetent  bei der Berufswahl,  Abklärung der beruflichen Fähigkeiten, Lehrstellen- und Arbeitsplatzsuche in der Privatwirtschaft.</p>
-				<a class="home-btn" href="#">Mehr Erfahren</a>
+				<a class="home-btn" href="offer.html">Mehr Erfahren</a>
 			</div>
 			<div class="col-12 col-sm-6 reference-block reference-right">
 				<img src="img/eline_neu.png" alt="img">
 				<div class="home-title">Für Unternehmen</div>
 				<h2>Eine neurodiverse Person anstellen</h2>
 				<p>Sie möchten Ihr Team kreativer machen und brauchen Mitarbeitende, die anders denken? Dann sollten Sie sich überlegen, eine neurodiverse Person anzustellen, um den Ideenpool um ein Vielfaches zu erweitern.</p>
-				<a class="home-btn" href="#">Mehr Erfahren</a>
+				<a class="home-btn" href="for-companies.html">Mehr Erfahren</a>
 			</div>
 			<div class="col-12 col-sm-6 reference-block reference-left">
 				<img src="img/jobs.png" alt="img">
 				<div class="home-title">Jobs</div>
 				<h2>Eine passende Anstellung finden</h2>
 				<p>Hier finden Sie Job-Ausschreibungen, für die Sie als neurodiverse Person perfekt passen könnten. Sie wissen nicht, welcher Job zu Ihnen passt? - senden Sie inAut Ihren Lebenslauf und er wird anonym aufgeschaltet.</p>
-				<a class="home-btn" href="#">Mehr Erfahren</a>
+				<a class="home-btn" href="jobs.html">Mehr Erfahren</a>
 			</div>
 			<div class="col-12 col-sm-6 reference-block reference-right">
 				<img src="img/mehr.png" alt="img">
 				<div class="home-title">Über uns</div>
 				<h2>Mehr erfahren über inAut</h2>
 				<p>Mit viel Engagement und Fachwissen unterstützen wir Menschen vom Autismus-Spektrum und mit anderen Formen von Neurodiversität seit 2018 dabei, Ihren Platz in der Privatwirtschaft zu finden. </p>
-				<a class="home-btn" href="#">Mehr Erfahren</a>
+				<a class="home-btn" href="about-us.html">Mehr Erfahren</a>
 			</div>
 		</div>
 	</div>
