--- a/app/__search-of-trial-missions.html
+++ b/app/__search-of-trial-missions.html
@@ -3,7 +3,9 @@
 @@include('_head.html')
 <body>
 	@@include('_header.html')
-	@@include('_search-of-trial-missions.html')
+	<main class="main">
+		@@include('_search-of-trial-missions.html')
+	</main>
 	@@include('_footer.html')
 	@@include('_scripts.html')
 </body>
