--- a/app/__support-in-everyday-work.html
+++ b/app/__support-in-everyday-work.html
@@ -3,7 +3,9 @@
 @@include('_head.html')
 <body>
 	@@include('_header.html')
-	@@include('_support-in-everyday-work.html')
+	<main class="main">
+		@@include('_support-in-everyday-work.html')
+	</main>
 	@@include('_footer.html')
 	@@include('_scripts.html')
 </body>
