--- a/app/current.html
+++ b/app/current.html
@@ -52,7 +52,8 @@
 		</div>
 	</div>
 </header>
-	<main class="main page-description">
+	<main class="main">
+		<main class="main page-description">
 	<div class="container page-description-top">
         <div class="page-description-block">
             <div class="global-item page-description-article">Aktuelles</div>
@@ -98,6 +99,7 @@
         <a class="general-link news-link" href="#">mehr laden</a>
     </div>
 </main>
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
