--- a/app/home.html
+++ b/app/home.html
@@ -53,6 +53,7 @@
 	</div>
 </header>
 	<main class="main">
+		<main class="main">
 	<div class="container home">
 		<div class="swiper-container mySwiper">
 			<div class="swiper-wrapper">
@@ -298,6 +299,7 @@
 	</div> -->
 </main>
 
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
