--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,8 @@
 		</div>
 	</div>
 </header>
-	<!-- Start Page -->
+	<main class="main">
+		<!-- Start Page -->
 <div class="container pt-5 pb-5">
     <ul>
         <li>
@@ -192,6 +193,7 @@
     </div> -->
 </div>
 
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
