--- a/app/jobs.html
+++ b/app/jobs.html
@@ -52,7 +52,8 @@
 		</div>
 	</div>
 </header>
-	<main class="main global">
+	<main class="main">
+		<main class="main global">
 	<div class="jobs-page">
         <div class="global-header">
             <img class="global-img" src="img/jobm.png" alt="img">
@@ -122,6 +123,7 @@
 		</div>
 	</div>
 </main>
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
