--- a/app/__coaching-job.html
+++ b/app/__coaching-job.html
@@ -3,7 +3,9 @@
 @@include('_head.html')
 <body>
 	@@include('_header.html')
-	@@include('_coaching-job.html')
+	<main class="main">
+		@@include('_coaching-job.html')
+	</main>
 	@@include('_footer.html')
 	@@include('_scripts.html')
 </body>
