--- a/app/about-us.html
+++ b/app/about-us.html
@@ -52,7 +52,8 @@
 		</div>
 	</div>
 </header>
-	<main class="main global">
+	<main class="main">
+		<main class="main global">
 	<div class="global-top">
         <div class="global-header">
             <img class="global-img" src="img/docms.png" alt="img">
@@ -229,6 +230,7 @@
        </div>
    </div>
 </main>
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
