--- a/app/advanced-training.html
+++ b/app/advanced-training.html
@@ -52,7 +52,8 @@
 		</div>
 	</div>
 </header>
-	<main class="main page-description">
+	<main class="main">
+		<main class="main page-description">
 	<div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
@@ -126,6 +127,7 @@
         </div>
     </div>
 </main>
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
