--- a/app/contact.html
+++ b/app/contact.html
@@ -53,6 +53,7 @@
 	</div>
 </header>
 	<main class="main">
+		<main class="main">
 	<div class="container">
         <div class="contact">
             <div class="global-item">Kontakt</div>
@@ -100,6 +101,7 @@
         </div>
     </div>
 </main>
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
