--- a/app/offer.html
+++ b/app/offer.html
@@ -52,7 +52,8 @@
 		</div>
 	</div>
 </header>
-	<main class="main global">
+	<main class="main">
+		<main class="main global">
 	<div class="global-top">
         <div class="global-top-content">
             <div class="global-header">
@@ -145,6 +146,7 @@
 		</div>
 	</div>
 </main>
+	</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
