--- a/app/_about-us.html
+++ b/app/_about-us.html
@@ -1,5 +1,5 @@
-<main class="main global">
-	<div class="global-top">
+<div class="global">
+    <div class="global-top">
         <div class="global-header">
             <img class="global-img" src="img/docms.png" alt="img">
         </div>
@@ -23,21 +23,21 @@
                 <a class="about-us-link" href="#">Zum VIDEO</a>
             </div>
         </div>
-	</div>
+    </div>
 
     <div class="neurodiversity">
-		<div class="container">
-			<div class="home-title neurodiversity-title">Veröffentlichungen</div>
-			<h2 class="neurodiversity-item about-indent">Gefühle ohne Worte</h2>
+        <div class="container">
+            <div class="home-title neurodiversity-title">Veröffentlichungen</div>
+            <h2 class="neurodiversity-item about-indent">Gefühle ohne Worte</h2>
             <div class="home-title about-us-item">Wie sich Menschen mit Autismus ihrer Emotionen bewusst werden können.</div>
-			<p class="neurodiversity-text word-text">
-				Menschen mit frühkindlichem Autismus können ihren Emotionen oft keine Worte verleihen. Könnte dies daran liegen, dass sie sich aus neurobiologischen Gründen ihrer Emotionen nicht bewusst werden? Dieses Buch zeigt Erklärungsansätze auf und eröffnet Fachpersonen und Eltern von Betroffenen Möglichkeiten, den emotionalen Bewusstwerdungsprozess bei Menschen mit frühkindlichem Autismus anzuregen.
-			</p>
+            <p class="neurodiversity-text word-text">
+                Menschen mit frühkindlichem Autismus können ihren Emotionen oft keine Worte verleihen. Könnte dies daran liegen, dass sie sich aus neurobiologischen Gründen ihrer Emotionen nicht bewusst werden? Dieses Buch zeigt Erklärungsansätze auf und eröffnet Fachpersonen und Eltern von Betroffenen Möglichkeiten, den emotionalen Bewusstwerdungsprozess bei Menschen mit frühkindlichem Autismus anzuregen.
+            </p>
             <a class="about-us-link about-us-btn" href="#">Buch Kaufen</a>
-		</div>
-	</div>
+        </div>
+    </div>
 
-   <div class="container">
+    <div class="container">
        <div class="our-team">
            <div class="home-title current-title">Unser Team</div>
            <div class="row">
@@ -173,5 +173,5 @@
                 </div>
            </div>
        </div>
-   </div>
-</main>
+    </div>
+</div>
