--- a/app/_blog-article.html
+++ b/app/_blog-article.html
@@ -1,5 +1,5 @@
-<main class="main page-description">
-	<div class="container page-description-top">
+<div class="page-description">
+    <div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="current.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
@@ -93,4 +93,4 @@
             </div>
         </div>
     </div>
-</main>
+</div>
