--- a/app/blog-article.html
+++ b/app/blog-article.html
@@ -53,8 +53,8 @@
 	</div>
 </header>
 	<main class="main">
-		<main class="main page-description">
-	<div class="container page-description-top">
+		<div class="page-description">
+    <div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="current.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
@@ -148,7 +148,7 @@
             </div>
         </div>
     </div>
-</main>
+</div>
 	</main>
 	<footer class="footer">
     <div class="footer-content">
