--- a/app/coaching-job.html
+++ b/app/coaching-job.html
@@ -53,8 +53,8 @@
 	</div>
 </header>
 	<main class="main">
-		<main class="main page-description">
-	<div class="container page-description-top">
+		<div class="page-description">
+    <div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
@@ -70,12 +70,12 @@
         <div class="global-text page-description-text">Sie haben bereits eine passende Anstellung in der Privatwirtschaft, jedoch haben sich in letzter Zeit neue Herausforderungen ergeben, mit denen Sie nicht alleine umgehen können? Haben Sie z.B. einen neuen direkten Vorgesetzten oder vielleicht haben Sie auch erst kürzlich eine Diagnose gestellt bekommen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in mit praktischen Tipps im Arbeitsalltag, sodass Ihre Stelle erhalten werden kann. </div>
     </div>
     <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
     <div class="container go-block">
         <div class="go-block-content">
             <a class="go-block-previous" href="offer.html">
@@ -84,7 +84,7 @@
             <div class="go-block-text">Zurück</div>
         </div>
     </div>
-</main>
+</div>
 	</main>
 	<footer class="footer">
     <div class="footer-content">
