--- a/app/current.html
+++ b/app/current.html
@@ -53,8 +53,8 @@
 	</div>
 </header>
 	<main class="main">
-		<main class="main page-description">
-	<div class="container page-description-top">
+		<div class="page-description">
+    <div class="container page-description-top">
         <div class="page-description-block">
             <div class="global-item page-description-article">Aktuelles</div>
         </div>
@@ -98,7 +98,7 @@
         </div>
         <a class="general-link news-link" href="#">mehr laden</a>
     </div>
-</main>
+</div>
 	</main>
 	<footer class="footer">
     <div class="footer-content">
