--- a/app/hire-person.html
+++ b/app/hire-person.html
@@ -53,38 +53,38 @@
 	</div>
 </header>
 	<main class="main">
-		<main class="main page-description">
-	<div class="container page-description-top">
-        <div class="breadcrumbs">
-            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="breadcrumbs-link" href="#">Für Unternehmen</a>
-        </div>
-        <div class="page-description-block">
-            <div class="page-description-img">
-                <img src="img/svg/chairmm.svg" alt="img">
+		<div class="page-description">
+    <div class="container page-description-top">
+            <div class="breadcrumbs">
+                <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="breadcrumbs-link" href="#">Für Unternehmen</a>
             </div>
-            <div class="global-item page-description-article">Für Unternehmen</div>
+            <div class="page-description-block">
+                <div class="page-description-img">
+                    <img src="img/svg/chairmm.svg" alt="img">
+                </div>
+                <div class="global-item page-description-article">Für Unternehmen</div>
+            </div>
+            <h1>Machen Sie als Firma den entscheidenden Unterschied</h1>
+            <div class="global-text page-description-text">Wollen Sie Ihr Team leistungsstärker und kreativer machen? Die Stärken einer neurodiversen Person liegen oftmals darin anders zu denken und so auf neue Lösungswege zu kommen. Ebenfalls entdecken neurodiverse Menschen häufiger Lücken und Optimierungspotenzial. Werfen Sie einen Blick auf unsere anonymisierten CV’s oder schreiben Sie hier eine Stellen anonym aus.</div>
         </div>
-        <h1>Machen Sie als Firma den entscheidenden Unterschied</h1>
-        <div class="global-text page-description-text">Wollen Sie Ihr Team leistungsstärker und kreativer machen? Die Stärken einer neurodiversen Person liegen oftmals darin anders zu denken und so auf neue Lösungswege zu kommen. Ebenfalls entdecken neurodiverse Menschen häufiger Lücken und Optimierungspotenzial. Werfen Sie einen Blick auf unsere anonymisierten CV’s oder schreiben Sie hier eine Stellen anonym aus.</div>
-    </div>
-    <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
-    <div class="container go-block">
-        <div class="go-block-content">
-            <a class="go-block-previous" href="for-companies.html">
-                <img src="img/svg/leftm.svg" alt="img">
-            </a>
-            <div class="go-block-text">Zurück</div>
+        <div class="contact-us">
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
         </div>
     </div>
-</main>
+        <div class="container go-block">
+            <div class="go-block-content">
+                <a class="go-block-previous" href="for-companies.html">
+                    <img src="img/svg/leftm.svg" alt="img">
+                </a>
+                <div class="go-block-text">Zurück</div>
+            </div>
+        </div>
+</div>
 	</main>
 	<footer class="footer">
     <div class="footer-content">
