--- a/app/jobs.html
+++ b/app/jobs.html
@@ -53,8 +53,8 @@
 	</div>
 </header>
 	<main class="main">
-		<main class="main global">
-	<div class="jobs-page">
+		<div class="global">
+    <div class="jobs-page">
         <div class="global-header">
             <img class="global-img" src="img/jobm.png" alt="img">
         </div>
@@ -63,7 +63,7 @@
             <h1 class="global-title">Mehr als “nur” eine Jobbörse</h1>
             <div class="global-text an-text">Es gibt Tätigkeiten und Berufe, für welche neurodiverse Menschen genau die richtigen Fähigkeiten und Stärken mitbringen. Gerne veröffentlichen wir hier Ihre Stellenausschreibung - anonym - und führen das erste Kennenlernen im recruiting-prozess für Sie durch. Wir entscheiden dann, gemeinsam mit den Bewerber/innen, ob Sie sich alleine bei Ihnen vorstellen oder gerne unsere Unterstützung in Anspruch nehmen wollen. Auch Sie als Arbeitgeber/in können entscheiden, ob Sie inAut gerne beim Erstgespräch dabei haben möchten.</div>
         </div>
-	</div>
+    </div>
 
     <div class="jobs-content">
         <div class="container">
@@ -116,13 +116,13 @@
     </div>
 
     <div class="contact-us contact-us-mob">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
-</main>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
+</div>
 	</main>
 	<footer class="footer">
     <div class="footer-content">
