--- a/app/_advanced-training.html
+++ b/app/_advanced-training.html
@@ -1,5 +1,5 @@
-<main class="main page-description">
-	<div class="container page-description-top">
+<div class="page-description">
+    <div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
@@ -57,12 +57,12 @@
         </div>
     </div>
     <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
     <div class="container go-block">
         <div class="go-block-content">
             <a class="go-block-previous" href="offer.html">
@@ -71,4 +71,4 @@
             <div class="go-block-text">Zurück</div>
         </div>
     </div>
-</main>
+</div>
