--- a/app/_current.html
+++ b/app/_current.html
@@ -1,5 +1,5 @@
-<main class="main page-description">
-	<div class="container page-description-top">
+<div class="page-description">
+    <div class="container page-description-top">
         <div class="page-description-block">
             <div class="global-item page-description-article">Aktuelles</div>
         </div>
@@ -43,4 +43,4 @@
         </div>
         <a class="general-link news-link" href="#">mehr laden</a>
     </div>
-</main>
+</div>
