--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -1,5 +1,5 @@
-<main class="main global">
-	<div class="global-top">
+<div class="global">
+    <div class="global-top">
         <div class="global-top-content">
             <div class="global-header">
                 <img class="global-img" src="img/bildf.png" alt="img">
@@ -44,15 +44,15 @@
                 </div>
             </div>
         </div>
-	</div>
+    </div>
 
     <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
 
     <div class="our-network">
         <div class="container">
@@ -87,4 +87,4 @@
             </div>
         </div>
     </div>
-</main>
+</div>
