--- a/app/_looking-job.html
+++ b/app/_looking-job.html
@@ -1,5 +1,5 @@
-<main class="main page-description">
-	<div class="container page-description-top">
+<div class="page-description">
+    <div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
@@ -15,12 +15,12 @@
         <div class="global-text page-description-text">InAut hilft bei der Erstellung des Bewerbungsdossiers, akquiriert passende Arbeitgeber und begleitet zu den Vorstellungsgesprächen.</div>
     </div>
     <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
     <div class="container go-block">
         <div class="go-block-content">
             <a class="go-block-previous" href="offer.html">
@@ -29,4 +29,4 @@
             <div class="go-block-text">Zurück</div>
         </div>
     </div>
-</main>
+</div>
