--- a/app/_offer.html
+++ b/app/_offer.html
@@ -1,93 +1,93 @@
-<main class="main global">
-	<div class="global-top">
-        <div class="global-top-content">
-            <div class="global-header">
-                <img class="global-img" src="img/sk_an.png" alt="img">
+<div class="global">
+    <div class="global-top">
+            <div class="global-top-content">
+                <div class="global-header">
+                    <img class="global-img" src="img/sk_an.png" alt="img">
+                </div>
+                <div class="container">
+                    <div class="global-item">Angebot</div>
+                    <h1 class="global-title">Massgeschneiderte Begleitung für Sie</h1>
+                    <div class="global-text an-text">Die Angebote der inAut GmbH können einzeln oder gesamthaft nacheinander in Anspruch genommen werden, sofern eine Kostengutsprache einer zuweisenden Stelle (z.B. IV-Stellen, Sozialdienst, RAV, Pro Infirmis) vorhanden ist. Sie sind noch nicht bei der IV oder einer anderen Stelle gemeldet, würden aber gerne durch uns unterstützt werden? Rufen Sie uns an, wir beraten Sie gerne!</div>
+                </div>
             </div>
             <div class="container">
-                <div class="global-item">Angebot</div>
-                <h1 class="global-title">Massgeschneiderte Begleitung für Sie</h1>
-                <div class="global-text an-text">Die Angebote der inAut GmbH können einzeln oder gesamthaft nacheinander in Anspruch genommen werden, sofern eine Kostengutsprache einer zuweisenden Stelle (z.B. IV-Stellen, Sozialdienst, RAV, Pro Infirmis) vorhanden ist. Sie sind noch nicht bei der IV oder einer anderen Stelle gemeldet, würden aber gerne durch uns unterstützt werden? Rufen Sie uns an, wir beraten Sie gerne!</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="line-dec">
-                <div class="line-dec-content"></div>
-            </div>
+                <div class="line-dec">
+                    <div class="line-dec-content"></div>
+                </div>
 
-            <div class="global-block">
-                <div class="row">
-                    <div class="col-12 col-sm-4 global-block-content">
-                        <div class="global-block-img">
-                            <img src="img/svg/nose.svg" alt="img">
+                <div class="global-block">
+                    <div class="row">
+                        <div class="col-12 col-sm-4 global-block-content">
+                            <div class="global-block-img">
+                                <img src="img/svg/nose.svg" alt="img">
+                            </div>
+                            <h2 class="global-block-title">Suche von Schnuppereinsätzen</h2>
+                            <div class="global-text global-block-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich gelebt werden.</div>
+                            <a class="general-link" href="search-of-trial-missions.html">zum Angebot</a>
                         </div>
-                        <h2 class="global-block-title">Suche von Schnuppereinsätzen</h2>
-                        <div class="global-text global-block-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich gelebt werden.</div>
-                        <a class="general-link" href="search-of-trial-missions.html">zum Angebot</a>
-                    </div>
-                    <div class="col-12 col-sm-4 global-block-content">
-                        <div class="global-block-img">
-                            <img src="img/svg/scool.svg" alt="img">
+                        <div class="col-12 col-sm-4 global-block-content">
+                            <div class="global-block-img">
+                                <img src="img/svg/scool.svg" alt="img">
+                            </div>
+                            <h2 class="global-block-title">Suche eines Ausbildungsplatzes</h2>
+                            <div class="global-text global-block-text">Von der Suche auf Online-Plattformen, über Bewerbungen erstellen bis zum Begleiten an Vorstellungsgespräche - inAut unterstützt Sie individuell.</div>
+                            <a class="general-link" href="job-search.html">zum Angebot</a>
                         </div>
-                        <h2 class="global-block-title">Suche eines Ausbildungsplatzes</h2>
-                        <div class="global-text global-block-text">Von der Suche auf Online-Plattformen, über Bewerbungen erstellen bis zum Begleiten an Vorstellungsgespräche - inAut unterstützt Sie individuell.</div>
-                        <a class="general-link" href="job-search.html">zum Angebot</a>
-                    </div>
-                    <div class="col-12 col-sm-4 global-block-content">
-                        <div class="global-block-img">
-                            <img src="img/svg/find.svg" alt="img">
+                        <div class="col-12 col-sm-4 global-block-content">
+                            <div class="global-block-img">
+                                <img src="img/svg/find.svg" alt="img">
+                            </div>
+                            <h2 class="global-block-title">Suche einer Festanstellung</h2>
+                            <div class="global-text global-block-text">Ein massgeschneidertes Stellenprofil,  gezieltes Kommunikationstraining gepaart mit unserem Netzwerk führen Sie zum Erfolg.</div>
+                            <a class="general-link" href="looking-job.html">zum Angebot</a>
                         </div>
-                        <h2 class="global-block-title">Suche einer Festanstellung</h2>
-                        <div class="global-text global-block-text">Ein massgeschneidertes Stellenprofil,  gezieltes Kommunikationstraining gepaart mit unserem Netzwerk führen Sie zum Erfolg.</div>
-                        <a class="general-link" href="looking-job.html">zum Angebot</a>
-                    </div>
-                    <div class="col-12 col-sm-4 global-block-content">
-                        <div class="global-block-img">
-                            <img src="img/svg/family.svg" alt="img">
+                        <div class="col-12 col-sm-4 global-block-content">
+                            <div class="global-block-img">
+                                <img src="img/svg/family.svg" alt="img">
+                            </div>
+                            <h2 class="global-block-title">Coaching während der Ausbildung</h2>
+                            <div class="global-text global-block-text">Eine Ausbildung birgt viele Höhen, aber auch Tiefen. Wir unterstützen Lernende sowie Arbeitgeber/innen auf dem Weg zum erfolgreichen Abschluss. </div>
+                            <a class="general-link" href="coaching-training.html">zum Angebot</a>
                         </div>
-                        <h2 class="global-block-title">Coaching während der Ausbildung</h2>
-                        <div class="global-text global-block-text">Eine Ausbildung birgt viele Höhen, aber auch Tiefen. Wir unterstützen Lernende sowie Arbeitgeber/innen auf dem Weg zum erfolgreichen Abschluss. </div>
-                        <a class="general-link" href="coaching-training.html">zum Angebot</a>
-                    </div>
-                    <div class="col-12 col-sm-4 global-block-content">
-                        <div class="global-block-img">
-                            <img src="img/svg/apt.svg" alt="img">
+                        <div class="col-12 col-sm-4 global-block-content">
+                            <div class="global-block-img">
+                                <img src="img/svg/apt.svg" alt="img">
+                            </div>
+                            <h2 class="global-block-title">Berufliche Abklärung in der Privatwirtschaft</h2>
+                            <div class="global-text global-block-text">Oft ist es schwierig, anhand ein bis zwei Schnuppertagen zu entscheiden, welcher der richtige Beruf ist. Eine Abklärung ist viel aufschlussreicher.</div>
+                            <a class="general-link" href="professional-clarification.html">zum Angebot</a>
                         </div>
-                        <h2 class="global-block-title">Berufliche Abklärung in der Privatwirtschaft</h2>
-                        <div class="global-text global-block-text">Oft ist es schwierig, anhand ein bis zwei Schnuppertagen zu entscheiden, welcher der richtige Beruf ist. Eine Abklärung ist viel aufschlussreicher.</div>
-                        <a class="general-link" href="professional-clarification.html">zum Angebot</a>
-                    </div>
-                    <div class="col-12 col-sm-4 global-block-content">
-                        <div class="global-block-img">
-                            <img src="img/svg/comp.svg" alt="img">
+                        <div class="col-12 col-sm-4 global-block-content">
+                            <div class="global-block-img">
+                                <img src="img/svg/comp.svg" alt="img">
+                            </div>
+                            <h2 class="global-block-title">Coaching zum Erhalt eines Arbeitsplatzes</h2>
+                            <div class="global-text global-block-text">Sie haben Schwierigkeiten aufgrund einer Diagnose in Ihrem bisherigen Job zu bestehen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in. </div>
+                            <a class="general-link" href="coaching-job.html">zum Angebot</a>
                         </div>
-                        <h2 class="global-block-title">Coaching zum Erhalt eines Arbeitsplatzes</h2>
-                        <div class="global-text global-block-text">Sie haben Schwierigkeiten aufgrund einer Diagnose in Ihrem bisherigen Job zu bestehen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in. </div>
-                        <a class="general-link" href="coaching-job.html">zum Angebot</a>
                     </div>
                 </div>
             </div>
+    </div>
+
+        <div class="neurodiversity neurodiversity-mob">
+        <div class="container">
+            <div class="home-title neurodiversity-title">Neurodiversität & Arbeit</div>
+            <h2 class="neurodiversity-item">Wer anders “tickt” kann Aussergewöhnliches leisten</h2>
+            <p class="neurodiversity-text word-text">
+                inAut unterstützt auch Menschen, bei denen eine psychosoziale, affektive oder verhaltensauffällige Persönlichkeitsstörung oder eine Depression diagnostiziert wurde.  Aus unserer Erfahrung brauchen Betroffene mehrere Versuche, um im Arbeitsalltag der Privatwirtschaft erstmals, oder auch nach einer längeren Arbeitsunfähigkeit wieder Fuss zu fassen…
+            </p>
+            <img class="neurodiversity-img" src="img/svg/plus.svg" alt="img">
+                <a class="neurodiversity-more" href="#">Mehr</a>
+            <!-- <div class="neurodiversity-more">Mehr</div> -->
         </div>
-	</div>
+    </div>
 
-    <div class="neurodiversity neurodiversity-mob">
-		<div class="container">
-			<div class="home-title neurodiversity-title">Neurodiversität & Arbeit</div>
-			<h2 class="neurodiversity-item">Wer anders “tickt” kann Aussergewöhnliches leisten</h2>
-			<p class="neurodiversity-text word-text">
-				inAut unterstützt auch Menschen, bei denen eine psychosoziale, affektive oder verhaltensauffällige Persönlichkeitsstörung oder eine Depression diagnostiziert wurde.  Aus unserer Erfahrung brauchen Betroffene mehrere Versuche, um im Arbeitsalltag der Privatwirtschaft erstmals, oder auch nach einer längeren Arbeitsunfähigkeit wieder Fuss zu fassen…
-			</p>
-			<img class="neurodiversity-img" src="img/svg/plus.svg" alt="img">
-            <a class="neurodiversity-more" href="#">Mehr</a>
-			<!-- <div class="neurodiversity-more">Mehr</div> -->
-		</div>
-	</div>
-
-    <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
-</main>
+        <div class="contact-us">
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
+</div>
