--- a/app/_support-in-everyday-work.html
+++ b/app/_support-in-everyday-work.html
@@ -1,5 +1,5 @@
-<main class="main page-description">
-	<div class="container page-description-top">
+<div class="page-description">
+    <div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
@@ -15,12 +15,12 @@
         <div class="global-text page-description-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
     </div>
     <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
     <div class="container go-block">
         <div class="go-block-content">
             <a class="go-block-previous" href="for-companies.html">
@@ -29,4 +29,4 @@
             <div class="go-block-text">Zurück</div>
         </div>
     </div>
-</main>
+</div>
