--- a/app/advanced-training.html
+++ b/app/advanced-training.html
@@ -53,8 +53,8 @@
 	</div>
 </header>
 	<main class="main">
-		<main class="main page-description">
-	<div class="container page-description-top">
+		<div class="page-description">
+    <div class="container page-description-top">
         <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
@@ -112,12 +112,12 @@
         </div>
     </div>
     <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
     <div class="container go-block">
         <div class="go-block-content">
             <a class="go-block-previous" href="offer.html">
@@ -126,7 +126,7 @@
             <div class="go-block-text">Zurück</div>
         </div>
     </div>
-</main>
+</div>
 	</main>
 	<footer class="footer">
     <div class="footer-content">
