--- a/app/for-companies.html
+++ b/app/for-companies.html
@@ -53,8 +53,8 @@
 	</div>
 </header>
 	<main class="main">
-		<main class="main global">
-	<div class="global-top">
+		<div class="global">
+    <div class="global-top">
         <div class="global-top-content">
             <div class="global-header">
                 <img class="global-img" src="img/bildf.png" alt="img">
@@ -99,15 +99,15 @@
                 </div>
             </div>
         </div>
-	</div>
+    </div>
 
     <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
+        <div class="container">
+            <h3>Kontaktieren Sie uns.</h3>
+            <div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+            <a class="home-btn" href="#">ZUm Kontakt</a>
+        </div>
+    </div>
 
     <div class="our-network">
         <div class="container">
@@ -142,7 +142,7 @@
             </div>
         </div>
     </div>
-</main>
+</div>
 
 	</main>
 	<footer class="footer">
